--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -25,6 +25,8 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	-ms-overflow-style: scrollbar;
+	width:auto;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
