--- a/assets/scss/_content-area.scss
+++ b/assets/scss/_content-area.scss
@@ -1,19 +1,16 @@
 #content-area {
-	overflow:auto;
-	width:100%;
-	min-height: 100vh;	
+	width:100%;	
 }
 
 #filter{
 	background: $grey;
-	width:30%;
-	max-width: 300px;
+	width:25%;
+	max-width: 25%;
 	display: inline-block;
 	float:left;
 
 	.inside{
 		padding: 20px;
-		max-width: 300px;
 	}
 
 	h4{
@@ -66,7 +63,7 @@
 }
 
 #Listings {
-	width:70%;
+	width:75%;
 	float:left;
 	display:inline-block;
 	padding:15px;
@@ -74,7 +71,7 @@
 
 	.search-area{
 		input[type="text"]{
-			width:70%;
+			width:75%;
 			background:transparent;
 			font-size: 2rem;
 			border: none;
