--- a/assets/scss/_content-area.scss
+++ b/assets/scss/_content-area.scss
@@ -64,60 +64,90 @@
 
 #Listings {
 	width:75%;
-	float:left;
 	display:inline-block;
 	padding:15px;
 	background:$offwhite;
 
 	.search-area{
+		width:90%;
+		padding: 10vh 0 0 0;
+		margin: 0 auto;
 		input[type="text"]{
-			width:75%;
+			width:100%;
 			background:transparent;
 			font-size: 2rem;
 			border: none;
 			border-bottom: 1px solid $lightgrey;
 			margin-bottom:20px;
-			color: $lightgrey;
+
 		}
+	
+		::placeholder{
+			color:$lightgrey;
+
+		}
+	
 	}
 
+
 	.sortby-area{
-		margin-bottom: 20px;
+		width:90%;
+		height:10vh;
+		margin: 0 auto;
 
 		.results{
-			color: $lightgrey;
+			padding: 1vh;
+			color: black;
 			font-size: 0.8rem;
 			display: inline-block;
+			background:#ffe8ed;
+			position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 
 		}
 		.sort-options{
 			float: right;
+			box-sizing:border-box;
+			height:100%;
+
+
 
 			select {
 				font-size: 0.9rem;
 				font-weight: 300;
 				border: 1px solid $lightgrey;
 				background: transparent;
-				padding: 4px;
+				padding: 0;
 				display: inline-block;
-				margin-right: 15px;
 				vertical-align: top;
+				position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 			}
 
 			.view{
-				display: inline-block;
+				position: relative;
+				top: 50%;
+				box-sizing: border-box;
+				transform: translateY(-50%);
+				float:right;
 
 				.fas{
-					margin-right: 15px;
+					margin-left: 4vh;
 					font-size: 1.5rem;
+					
 				}
 				.fas:hover{
-					margin-right: 15px;
 					font-size: 1.5rem;
 					cursor: pointer;
 				}
 			}
 		}
+	}
+
+	.row {
+		height:100%;
 	}
 	.listings-results{
 		margin-bottom: 80px;
