--- a/assets/scss/_content-area.scss
+++ b/assets/scss/_content-area.scss
@@ -4,7 +4,7 @@
 
 #filter{
 	background: $grey;
-	width:25%;
+	width:20%;
 	max-width: 25%;
 	display: inline-block;
 	float:left;
@@ -63,14 +63,13 @@
 }
 
 #Listings {
-	width:75%;
+	width:80%;
 	display:inline-block;
 	padding:15px;
-	background:$offwhite;
 
 	.search-area{
 		width:90%;
-		padding: 10vh 0 0 0;
+		padding: 8vh 0 0 0;
 		margin: 0 auto;
 		input[type="text"]{
 			width:100%;
@@ -110,11 +109,13 @@
 			float: right;
 			box-sizing:border-box;
 			height:100%;
+			
+		
 
 
 
 			select {
-				font-size: 0.9rem;
+				font-size: 4vh;
 				font-weight: 300;
 				border: 1px solid $lightgrey;
 				background: transparent;
@@ -122,8 +123,9 @@
 				display: inline-block;
 				vertical-align: top;
 				position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+				top: 50%;
+				transform: translateY(-50%);
+				padding:1vh 2vh;
 			}
 
 			.view{
@@ -150,7 +152,7 @@
 		height:100%;
 	}
 	.listings-results{
-		margin-bottom: 80px;
+		margin-bottom: 3vh;
 
 		.listing{
 			background: #fff;
@@ -158,7 +160,7 @@
 			-webkit-box-shadow: 0px 9px 21px -2px rgba(224,224,224,1);
 			-moz-box-shadow: 0px 9px 21px -2px rgba(224,224,224,1);
 			box-shadow: 0px 9px 21px -2px rgba(224,224,224,1);
-			color: white;
+			height:40vh;
 		}
 		.listing-img{
 			color: white;
