--- a/assets/scss/_content-area.scss
+++ b/assets/scss/_content-area.scss
@@ -10,33 +10,45 @@
 	float:left;
 
 	.inside{
-		padding: 20px;
+		padding: 3vh;
+
+		label {
+			margin-bottom: 2vh;
+			display:inline-block;
+		font-size:2.5vh;
+		}
 	}
 
 	h4{
-		font-size: 0.9rem;
-		margin-bottom: 25px;
-		font-weight: 600px;
+		display:inline-block;
+		margin: 12vh 0 8vh;
+		text-align:center;
+		font-size: 2.9vh;
+		font-weight: 400;
 		text-transform: uppercase;
+		width:100%;
 	}
 
 	select{
 		background: transparent;
 		padding:10px;
-		font-size:16px;
+		font-size:2.5vh;
 		font-weight:300;
 		color: #1b1b1b;
 		display:block;
-		margin-bottom:25px;
+		margin-bottom:2vh;
 		width:100%;
 	}
 
 	.filters {
+
+		
+
 		.title {
-			font-size: 0.9rem;
+			font-size:2.5vh;
 			display: block;
-			margin-bottom: 1rem;
-			color: $darkgrey;
+			margin-bottom: 2vh;
+			color: #1b1b1b;
 
 		}
 		input[type="text"]{
@@ -52,10 +64,11 @@
 		&.extras {
 			label{
 				display:block;
+				color:$darkgrey;
 				width:100%;
-				padding: 10px 0;
 				input[type="checkbox"]{
 					float:right;
+					cursor:pointer;
 				}
 			}
 		}
