--- a/assets/scss/_content-area.scss
+++ b/assets/scss/_content-area.scss
@@ -174,6 +174,7 @@
 			-moz-box-shadow: 0px 9px 21px -2px rgba(224,224,224,1);
 			box-shadow: 0px 9px 21px -2px rgba(224,224,224,1);
 			height:40vh;
+			text-align:center;
 		}
 		.listing-img{
 			color: white;
@@ -184,7 +185,7 @@
 			-moz-background-size: cover;
 			-o-background-size: cover;
 			background-size: cover;
-			min-height: 200px;
+			min-height: 75%;
 			-webkit-border-top-left-radius: 5px;
 			-webkit-border-top-right-radius: 5px;
 			-moz-border-radius-topleft: 5px;
@@ -289,8 +290,16 @@
 			}
 		}
 
+				.bottom-info-container {
+					height:25%;
+					width:100%;
+				}
+
 				.bottom-info{
-				padding:10px 15px;
+					margin: 0 auto;
+					position:relative;
+					top: 50%;
+					transform: translateY(-50%);
 
 				.price {
 					font-size: 1.1rem;
